--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fancy_containers
 description: Fancy Containers Flutter Package
 version: 0.0.1
-homepage:
+homepage: https://github.com/adityathakurxd/fancy_containers
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
